force-app/main/default/objects/Account/fields/Account_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Arabic__c</fullName>
    <label>Account Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>