force-app/main/default/objects/Account/fields/Added_Via__c.field-meta.xml
<CustomField>
    <fullName>Added_Via__c</fullName>
    <label>Added Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>External Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>