force-app/main/default/objects/Account/fields/Admin_Number__c.field-meta.xml
<CustomField>
    <fullName>Admin_Number__c</fullName>
    <label>Admin Number</label>
    <type>Phone</type>
</CustomField>