force-app/main/default/objects/Account/fields/Agency_Category__c.field-meta.xml
<CustomField>
    <fullName>Agency_Category__c</fullName>
    <label>Agency Agreement Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Georgian</fullName>
            </value>
            <value>
                <fullName>United Arab Emirates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>