force-app/main/default/objects/Account/fields/Agency_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact_Number__c</fullName>
    <formula>IF(ISBLANK(Admin_Number__c), Phone, Admin_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Contact Number</label>
    <type>Text</type>
</CustomField>