force-app/main/default/objects/Account/fields/Agreement_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Issued_Date__c</fullName>
    <label>Agreement Issued</label>
    <type>Date</type>
</CustomField>