force-app/main/default/objects/Account/fields/Agreement_Issued_Notification__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Issued_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Issued Notification</label>
    <type>Checkbox</type>
</CustomField>