force-app/main/default/objects/Account/fields/App_User__c.field-meta.xml
<CustomField>
    <fullName>App_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App Owner</label>
    <referenceTo>App_User__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>