force-app/main/default/objects/Account/fields/Arabic_Picklists_technical__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Picklists_technical__c</fullName>
    <label>Arabic Picklists (technical)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries_Arabic</valueSetName>
    </valueSet>
</CustomField>