force-app/main/default/objects/Account/fields/Assigned_RM__c.field-meta.xml
<CustomField>
    <fullName>Assigned_RM__c</fullName>
    <label>Assigned RM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>