force-app/main/default/objects/Account/fields/Assigned_RM_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_RM_Contact__c</fullName>
    <formula>IF(Owner.MobilePhone == &apos;&apos;, Owner.Phone, Owner.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned RM Contact</label>
    <type>Text</type>
</CustomField>