force-app/main/default/objects/Account/fields/Assigned_RM_Name_as_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_RM_Name_as_User__c</fullName>
    <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned RM Name as User</label>
    <type>Text</type>
</CustomField>