force-app/main/default/objects/Account/fields/Board_Resolution_or_POA__c.field-meta.xml
<CustomField>
    <fullName>Board_Resolution_or_POA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Resolution or POA</label>
    <type>Checkbox</type>
</CustomField>