force-app/main/default/objects/Account/fields/Board_Resolution_Specifying_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Board_Resolution_Specifying_Signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Resolution Specifying Signatory</label>
    <type>Checkbox</type>
</CustomField>