force-app/main/default/objects/Account/fields/Bookings__c.field-meta.xml
<CustomField>
    <fullName>Bookings__c</fullName>
    <label>Bookings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>