force-app/main/default/objects/Account/fields/Certificate_of_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Good_Standing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Good Standing</label>
    <type>Checkbox</type>
</CustomField>