force-app/main/default/objects/Account/fields/Certificate_of_Incumbency__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Incumbency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Incumbency</label>
    <type>Checkbox</type>
</CustomField>