force-app/main/default/objects/Account/fields/City_Arabic__c.field-meta.xml
<CustomField>
    <fullName>City_Arabic__c</fullName>
    <label>City (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>