force-app/main/default/objects/Account/fields/City_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>City_of_Incorporation__c</fullName>
    <label>City of Incorporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>