force-app/main/default/objects/Account/fields/Completed_Notification__c.field-meta.xml
<CustomField>
    <fullName>Completed_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Completed Notification</label>
    <type>Checkbox</type>
</CustomField>