force-app/main/default/objects/Account/fields/Contact_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_2__c</fullName>
    <label>Admin Email</label>
    <type>Email</type>
</CustomField>