force-app/main/default/objects/Account/fields/Country_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation__c</fullName>
    <label>Country of Incorporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>