force-app/main/default/objects/Account/fields/Country_of_Incorporation_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation_Arabic__c</fullName>
    <label>Country of Incorporation(Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>