force-app/main/default/objects/Account/fields/Date_of_Birth_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Arabic__c</fullName>
    <label>Date of Birth (Arabic)</label>
    <type>Date</type>
</CustomField>