force-app/main/default/objects/Account/fields/Email_Notification_Flag_Updated_By_Flow__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Flag_Updated_By_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notification Flag Updated By Flow</label>
    <type>Checkbox</type>
</CustomField>