force-app/main/default/objects/Account/fields/Emirates_National_id__c.field-meta.xml
<CustomField>
    <fullName>Emirates_National_id__c</fullName>
    <label>Emirates/National Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>