force-app/main/default/objects/Account/fields/Emirates_National_Id_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Emirates_National_Id_Arabic__c</fullName>
    <label>Emirates/National Id (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>