force-app/main/default/objects/Account/fields/Financial_Number__c.field-meta.xml
<CustomField>
    <fullName>Financial_Number__c</fullName>
    <displayFormat>FN-{00000}</displayFormat>
    <label>Financial Number</label>
    <type>AutoNumber</type>
</CustomField>