force-app/main/default/objects/Account/fields/First_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Arabic__c</fullName>
    <label>First Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>