force-app/main/default/objects/Account/fields/First_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>