force-app/main/default/objects/Account/fields/First_Time_Project_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Project_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Time Project Notification Sent</label>
    <type>Checkbox</type>
</CustomField>