force-app/main/default/objects/Account/fields/Half_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Half_Executed_Date__c</fullName>
    <label>Half Executed</label>
    <type>Date</type>
</CustomField>