force-app/main/default/objects/Account/fields/Half_Executed_Notification__c.field-meta.xml
<CustomField>
    <fullName>Half_Executed_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Half Executed Notification</label>
    <type>Checkbox</type>
</CustomField>