force-app/main/default/objects/Account/fields/Has_Booked_Unit__c.field-meta.xml
<CustomField>
    <fullName>Has_Booked_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Booked Unit</label>
    <type>Checkbox</type>
</CustomField>