force-app/main/default/objects/Account/fields/In_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Process_Date__c</fullName>
    <label>In Process</label>
    <type>Date</type>
</CustomField>