force-app/main/default/objects/Account/fields/In_Process_Notification__c.field-meta.xml
<CustomField>
    <fullName>In_Process_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Process Notification</label>
    <type>Checkbox</type>
</CustomField>