force-app/main/default/objects/Account/fields/Is_Agency_International__c.field-meta.xml
<CustomField>
    <fullName>Is_Agency_International__c</fullName>
    <label>Is Agency International</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>