force-app/main/default/objects/Account/fields/Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Authority__c</fullName>
    <label>Issuing Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ajman Freezone Authority</fullName>
            </value>
            <value>
                <fullName>Canada Business Corporations Act</fullName>
            </value>
            <value>
                <fullName>Creative City Media Free Zone, Fujairah</fullName>
            </value>
            <value>
                <fullName>Department of Economic Development - Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Department of Economic Development - Ajman</fullName>
            </value>
            <value>
                <fullName>Department of Economic Development - Dubai</fullName>
            </value>
            <value>
                <fullName>Department of Economic Development - Ras Al Khaimah</fullName>
            </value>
            <value>
                <fullName>Department of Economic Development - Sharjah</fullName>
            </value>
            <value>
                <fullName>Dubai Integrated Economic Zones Authority</fullName>
            </value>
            <value>
                <fullName>Ministry of Micro, Small and Medium Enterprises (MSME), Government of India</fullName>
            </value>
            <value>
                <fullName>Ras Al Khaimah Economic Zone (RAKEZ)</fullName>
            </value>
            <value>
                <fullName>Registrar of Companies - Hong Kong</fullName>
            </value>
            <value>
                <fullName>Sharjah Media City - Free Zone Authority</fullName>
            </value>
            <value>
                <fullName>Sharjah Publishing City - Free Zone Authority</fullName>
            </value>
            <value>
                <fullName>Tartu County Court Registration Department</fullName>
            </value>
            <value>
                <fullName>The Registrar of Companies for England and Wales</fullName>
            </value>
            <value>
                <fullName>Ministry of Commerce, Industry &amp; Investment Promotion - Sultanate of Oman</fullName>
            </value>
            <value>
                <fullName>Istanbul Trade Registry Directorate - Republic of Turkiye</fullName>
            </value>
            <value>
                <fullName>The Netherlands Chamber of Commerce KVK</fullName>
            </value>
            <value>
                <fullName>Ankara Chamber of Commerce</fullName>
            </value>
            <value>
                <fullName>The Kolkata Municipal Corporation</fullName>
            </value>
            <value>
                <fullName>İSTANBUL TİCARET ODASI (ISTANBUL CHAMBER OF COMMERCE)</fullName>
            </value>
            <value>
                <fullName>Companies Registration Office (CRO), Ireland</fullName>
            </value>
            <value>
                <fullName>Revenue Service of Georgia</fullName>
            </value>
            <value>
                <fullName>Sharjah Research Technology and Innovation Park Free Zone Authority (SRTIP)</fullName>
            </value>
            <value>
                <fullName>National Agency of Public Registry (LEPL)</fullName>
            </value>
            <value>
                <fullName>Federal Board of Revenue (FBR) - Government of Pakistan</fullName>
            </value>
            <value>
                <fullName>Dubai Aviation City Corporation</fullName>
            </value>
            <value>
                <fullName>Ajman Nuventures Centre Free Zone (ANC)</fullName>
            </value>
            <value>
                <fullName>Magistrat der Stadt Büdingen - Gewerbeamt (Trade Office of the City of Buedingen) Germany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>