force-app/main/default/objects/Account/fields/KYB_Signed__c.field-meta.xml
<CustomField>
    <fullName>KYB_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYB Signed</label>
    <type>Checkbox</type>
</CustomField>