force-app/main/default/objects/Account/fields/Last_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Arabic__c</fullName>
    <label>Last Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>