force-app/main/default/objects/Account/fields/License_Copy_All_Pages__c.field-meta.xml
<CustomField>
    <fullName>License_Copy_All_Pages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Copy All Pages</label>
    <type>Checkbox</type>
</CustomField>