force-app/main/default/objects/Account/fields/Middle_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_Arabic__c</fullName>
    <label>Middle Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>