force-app/main/default/objects/Account/fields/MIRA_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>MIRA_Agent_Email__c</fullName>
    <label>MIRA Agent Email</label>
    <type>Email</type>
</CustomField>