force-app/main/default/objects/Account/fields/MIRA_RM_Email__c.field-meta.xml
<CustomField>
    <fullName>MIRA_RM_Email__c</fullName>
    <label>MIRA RM Email</label>
    <type>Email</type>
</CustomField>