force-app/main/default/objects/Account/fields/Multiple_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Registrations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Registrations</label>
    <type>Checkbox</type>
</CustomField>