force-app/main/default/objects/Account/fields/National_Id_Expiry__c.field-meta.xml
<CustomField>
    <fullName>National_Id_Expiry__c</fullName>
    <label>National Id Expiry</label>
    <type>Date</type>
</CustomField>