force-app/main/default/objects/Account/fields/NOC_Issued_by_Authority__c.field-meta.xml
<CustomField>
    <fullName>NOC_Issued_by_Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOC Issued by Authority</label>
    <type>Checkbox</type>
</CustomField>