force-app/main/default/objects/Account/fields/ORN_Number__c.field-meta.xml
<CustomField>
    <fullName>ORN_Number__c</fullName>
    <label>ORN-RERA Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>