force-app/main/default/objects/Account/fields/ORN_Number_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ORN_Number_Expiry_Date__c</fullName>
    <label>ORN Number Expiry Date</label>
    <type>Date</type>
</CustomField>