force-app/main/default/objects/Account/fields/Own_Account__c.field-meta.xml
<CustomField>
    <fullName>Own_Account__c</fullName>
    <formula>IF(Account_Owner_Full_Name__c == $User.FirstName&amp;&quot; &quot;&amp; $User.LastName,
 true,
 IF($Profile.Name == &apos;System Administrator&apos;,
 true,
 false
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Own Account</label>
    <type>Checkbox</type>
</CustomField>