force-app/main/default/objects/Account/fields/Owner_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Assigned</label>
    <type>Checkbox</type>
</CustomField>