force-app/main/default/objects/Account/fields/P_O_Box_Number__c.field-meta.xml
<CustomField>
    <fullName>P_O_Box_Number__c</fullName>
    <label>P.O Box Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>