force-app/main/default/objects/Account/fields/Passport_Copy_of_all_Shareholders__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_of_all_Shareholders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Copy of all Shareholders</label>
    <type>Checkbox</type>
</CustomField>