force-app/main/default/objects/Account/fields/Passport_Copy_of_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_of_Signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Copy of Signatory</label>
    <type>Checkbox</type>
</CustomField>