force-app/main/default/objects/Account/fields/Passport_Name__c.field-meta.xml
<CustomField>
    <fullName>Passport_Name__c</fullName>
    <label>Passport Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>