force-app/main/default/objects/Account/fields/Person_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Contact_Email__c</fullName>
    <label>Person Contact Email</label>
    <type>Email</type>
</CustomField>