force-app/main/default/objects/Account/fields/Person_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Person_Contact_Phone__c</fullName>
    <label>Person Contact Phone</label>
    <type>Phone</type>
</CustomField>