force-app/main/default/objects/Account/fields/Postal_Code_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Arabic__c</fullName>
    <label>Postal Code (Arabic)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>