force-app/main/default/objects/Account/fields/Project_Detail_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Project_Detail_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Detail Notification Sent</label>
    <type>Checkbox</type>
</CustomField>