force-app/main/default/objects/Account/fields/Reason_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Cancellation__c</fullName>
    <label>Reason of Cancellation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>