force-app/main/default/objects/Account/fields/Registered_In__c.field-meta.xml
<CustomField>
    <fullName>Registered_In__c</fullName>
    <label>Registered In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>