force-app/main/default/objects/Account/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <formula>&quot;REG-&quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp; LEFT(Id, 5) &amp; &quot;-&quot; &amp;
MID(TEXT(HOUR(TIMEVALUE(CreatedDate))), 1, 2) &amp;
MID(TEXT(MINUTE(TIMEVALUE(CreatedDate))), 1, 2) &amp;
MID(TEXT(SECOND(TIMEVALUE(CreatedDate))), 1, 2)&amp; &quot;-&quot;&amp; TEXT(Serial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Number</label>
    <type>Text</type>
</CustomField>