force-app/main/default/objects/Account/fields/Renewal_Completed__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Completed__c</fullName>
    <label>Renewal Completed</label>
    <type>Date</type>
</CustomField>