force-app/main/default/objects/Account/fields/Renewal_Issued__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Issued__c</fullName>
    <label>Renewal Issued</label>
    <type>Date</type>
</CustomField>