force-app/main/default/objects/Account/fields/Resident_of_UAE__c.field-meta.xml
<CustomField>
    <fullName>Resident_of_UAE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resident of UAE</label>
    <type>Checkbox</type>
</CustomField>