force-app/main/default/objects/Account/fields/Salutation_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Salutation_Arabic__c</fullName>
    <label>Salutation (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>