force-app/main/default/objects/Account/fields/Second_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Second_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>