force-app/main/default/objects/Account/fields/Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Name__c</fullName>
    <label>Signatory Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>