force-app/main/default/objects/Account/fields/Signatory_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Name_Arabic__c</fullName>
    <label>Signatory Name Arabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>