force-app/main/default/objects/Account/fields/Signatory_Number__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Number__c</fullName>
    <label>Signatory Number</label>
    <type>Phone</type>
</CustomField>