force-app/main/default/objects/Account/fields/Sum_of_Opportunities_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Opportunities_Amounts__c</fullName>
    <label>Sum of Opportunities Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>