force-app/main/default/objects/Account/fields/Summer_Escape_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Summer_Escape_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summer Escape Notification Sent</label>
    <type>Checkbox</type>
</CustomField>