force-app/main/default/objects/Account/fields/Trade_License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Expiry_Date__c</fullName>
    <label>Trade License Expiry Date</label>
    <type>Date</type>
</CustomField>