force-app/main/default/objects/Account/fields/Trade_License_Expiry_Notification_Count__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Expiry_Notification_Count__c</fullName>
    <label>Trade License Expiry Notification Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>