force-app/main/default/objects/Account/fields/Trade_License_Expiry_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Expiry_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade License Expiry Notification Sent</label>
    <type>Checkbox</type>
</CustomField>