force-app/main/default/objects/Account/fields/Trade_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Number__c</fullName>
    <label>Trade License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>