force-app/main/default/objects/Account/fields/TRN_Certificate__c.field-meta.xml
<CustomField>
    <fullName>TRN_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRN Certificate</label>
    <type>Checkbox</type>
</CustomField>