force-app/main/default/objects/Account/fields/TRN_Number__c.field-meta.xml
<CustomField>
    <fullName>TRN_Number__c</fullName>
    <label>TRN Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>