force-app/main/default/objects/Account/fields/Visa_Number__c.field-meta.xml
<CustomField>
    <fullName>Visa_Number__c</fullName>
    <label>Visa Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>